--- a/index.html
+++ b/index.html
@@ -22,19 +22,19 @@
     </div>
 
     <div class ="image ">
-      <div class="image2 " onclick="window.open('work/work.html','_blank');" style="cursor: pointer;">
+      <div class="image2 " onclick="window.open('index.html','_blank');" style="cursor: pointer;">
       </div>
       <span class="text2">work</span>
     </div>
 
     <div class="image ">
-      <div class="image3 " onclick="window.open('microblog/microblog.html','_blank');" style="cursor: pointer;">
+      <div class="image3 " onclick="window.open('index.html','_blank');" style="cursor: pointer;">
       </div>
       <span class="text3">microblog</span>
     </div>
 
     <div class="image ">
-      <div class="image4 " onclick="window.open('ronny/ronny.html','_blank');" style="cursor: pointer;">
+      <div class="image4 " onclick="window.open('index.html','_blank');" style="cursor: pointer;">
       </div>
       <span class="text4">RK</span>
     </div>
