--- a/microblog/microblog.html
+++ b/microblog/microblog.html
@@ -9,16 +9,21 @@
     <h1>Microblog</h1>
     <p>h/t <a href="https://www.chrisharrison.net/">Chris Harrison</a></p>
 
+    <!-- https://www.devglan.com/online-tools/aes-encryption-decryption -->
     <h2>2024</h2>
     <table>
       <tr>
+        <td>May 12</td>
+        <td>Long walk in Santa Clara with Ronny.</td>
+      </tr>
+      <!-- <tr>
         <td>May 11</td>
-        <td>Trying to be brave.</td>
+        <td>IxgMf3Ru9UjwLu99lrGd/QZFegizmcUUOIwV1pOwn/k=</td>
       </tr>
       <tr>
         <td>May 10</td>
-        <td>Left home. Slept alone at the Crowne Plaza.</td>
-      </tr>
+        <td>2Jmenk+sUb1QqaL1hiB6zMEi1VBjhBqpIo9b6fcBezNk+c4bF67l2q8Je+XXIYkR</td>
+      </tr> -->
       <tr>
         <td>May 4</td>
         <td>Went to Santa Clara with Ronny. Fieldwork with Beth. </td>
@@ -27,8 +32,144 @@
         <td>May 3</td>
         <td>Went to Sean’s (post surgery for Sean).</td>
       </tr>
-
-      <!-- Add more rows as needed -->
+      <tr>
+        <td>May 2</td>
+        <td>Took Ronny to Aragon to meet with counselor.</td>
+      </tr>
+      <tr>
+        <td>May 1</td>
+        <td>ICML paper accepted :).</td>
+        <!-- <td>tvpMh4ZV4oCuAn/4H1ulFb4HUvaAPTaO+vtGSu0drrpgLHVtsaM4brdlio9EVUmZIn6ehpyoqvtWNu+ZeF697Q==</td> -->
+      </tr>
+      <!-- <tr>
+        <td>April 30</td>
+        <td>XPVorclyW47wYYW6Te1dB+UP6XZIiTXxSpsyxcwGLs4t1skAbxE5qzsBPOuwcH92qpm52eu7u32pV8XFZd+cePCZyRWjajGWp6S1Ll/blm6w/cBXtokCi2D7Ct/F1W8llHh6Edzth1/zyjrznGp+7Q==</td>
+      </tr> -->
+      <tr>
+        <td>April 29</td>
+        <td>First day back on the grind.</td>
+      </tr>
+      <tr>
+        <td>April 28</td>
+        <td>Made smash burgers with Tammy and Ronny. Visited Jidi at the hospital.</td>
+      </tr>
+      <tr>
+        <td>April 27</td>
+        <td>Salt and straw with mom.</td>
+      </tr>
+      <tr>
+        <td>April 18</td>
+        <td>Back surgery.</td>
+      </tr>
+      <tr>
+        <td>April 16</td>
+        <td>First day at Anthropic.</td>
+      </tr>
+      <tr>
+        <td>April 15</td>
+        <td>Tammy came home from NJ.</td>
+      </tr>
+      <tr>
+        <td>April 14</td>
+        <td>Mostafa’s wedding.</td>
+      </tr>
+      <tr>
+        <td>April 11</td>
+        <td>Mahar’s dad prayer, burial, and 3za. (Allah yerhamo)</td>
+      </tr>
+      <tr>
+        <td>April 10</td>
+        <td>Eid. Mahar’s dad passed away (Allah yerhamo).</td>
+      </tr>
+      <tr>
+        <td>April 9</td>
+        <td>Karam left for NYC.</td>
+      </tr>
+      <!-- <tr>
+        <td>April 3</td>
+        <td>yDfnpMYAlNKpR65sUQ73VEwrunjmpDfkEkRtFWvwXTTjbyzPGglfQtizZXjEr/sa</td>
+      </tr> -->
+      <tr>
+        <td>April 2</td>
+        <td>Took brother to guitar lesson + Habit burger after.</td>
+      </tr>
+      <tr>
+        <td>April 1</td>
+        <td>Costco with mom to get a bunch of ribs. Dean/Sean’s house after iftar.</td>
+      </tr>
+      <tr>
+        <td>March 31</td>
+        <td>Mongolian bbq with cousins.</td>
+      </tr>
+      <!-- <tr>
+        <td>March 23</td>
+        <td>iZ21Ecbq26l42u2eKps91WgzLIiqBlKQ59XbSNEz1Ew=</td>
+      </tr> -->
+      <!-- <tr>
+        <td>March 22</td>
+        <td>ce+vtpjRmDddP07o69e595anvLqec/xJaHZ28ypqsmg=</td>
+      </tr> -->
+      <!-- <tr>
+        <td>March 16</td>
+        <td>bD8kW/kR9r51sGgjOz4m5yd7Aw6b64j/Xb3rwKdEg5jkcei7YdUh3p7QfdOOvkwB</td>
+      </tr> -->
+      <tr>
+        <td>March 15</td>
+        <td>Stayed in with mom. Ronny went to a math competition at Aragon.</td>
+      </tr>
+      <tr>
+        <td>March 14</td>
+        <td>Iftar at our house with nana and jidi.</td>
+      </tr>
+      <tr>
+        <td>March 13</td>
+        <td>In-n-out for iftar with mom.</td>
+        <!-- <td>6zGbEuFaKIPVXS2ovN/h3LWzyGDHd/E+Pl5TyoPr8Lq4ycOhy7h+vWpDMZb4ph+/</td> -->
+      </tr>
+    </table>
+    <h2>2023</h2>
+    <table>
+      <tr>
+        <td>November 18</td>
+        <td>Saw Connery at Moritz's.</td>
+      </tr>
+      <!-- <tr>
+        <td>November 17</td>
+        <td>ZLso2kMXGmpRiO9VgvyMCCYe4aK5zRTGREndNA7QslOoldUXG1KAox+6b2tFTB2E</td>
+      </tr>
+      <tr>
+        <td>November 16</td>
+        <td>ZLso2kMXGmpRiO9VgvyMCCYe4aK5zRTGREndNA7QslOoldUXG1KAox+6b2tFTB2E</td>
+      </tr> -->
+      <!-- <tr>
+        <td>November 15</td>
+        <td>u3QazSPOnHYWwaXnGg4MsxoAAFoPu2QbqW5WSVKtOG4=</td>
+      </tr> -->
+      <tr>
+        <td>November 14</td>
+        <td>Went out to Taco Tuesday with the #boys.</td>
+      </tr>
+      <tr>
+        <td>November 1</td>
+        <td>Worked really hard on the forecasting project.</td>
+        <!-- <td>m3enBWoSwKnhYQXBXcZ5rHw6JVbIg79u9d+VCtflx+rH49XVZZ8rIYVNZAXW5jYz</td> -->
+      </tr>
+      <!-- <tr>
+        <td>October 16</td>
+        <td>tXcnzPEmSswb/r4veVfuNnt3Suji28nIoITtlkmK84k=</td>
+      </tr> -->
+      <tr>
+        <td>October 11</td>
+        <td>Ate my last good meal before diet.</td>
+      </tr>
+      <tr>
+        <td>August 5</td>
+        <td>Mom throws a party for Tammy’s marriage celebration.</td>
+      </tr>
+      <tr>
+        <td>August 4</td>
+        <td>Jammed with Dean and Eiad.</td>
+      </tr>
     </table>
   </div>
 </body>
