point mb to page

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </div>
 
     <div class="image ">
-      <div class="image3 " onclick="window.open('index.html','_blank');" style="cursor: pointer;">
+      <div class="image3 " onclick="window.open('microblog/microblog.html','_blank');" style="cursor: pointer;">
       </div>
       <span class="text3">microblog</span>
     </div>
