rk page + mb updates

--- a/microblog/microblog.html
+++ b/microblog/microblog.html
@@ -13,8 +13,16 @@
     <h2>2024</h2>
     <table>
       <tr>
+        <td>May 17</td>
+        <td>Lunch with Sam Bowman.</td>
+      </tr>
+      <tr>
+        <td>May 16</td>
+        <td>La Taqueria with Munzer Dwidari and Norris.</td>
+      </tr>
+      <tr>
         <td>May 14</td>
-        <td>Met/chatted with Danny Hernandez<3</td>
+        <td>Met/chatted with Danny Hernandez.</td>
       </tr>
       <tr>
         <td>May 13</td>
