--- a/microblog/microblog.html
+++ b/microblog/microblog.html
@@ -7,10 +7,10 @@
 <body>
   <div class="content">
     <h1>Microblog</h1>
-    <p>h/t <a href="https://www.chrisharrison.net/">Chris Harrison</a></p>
+    <p><span style="font-size: 18px;">(</span>h/t <a href="https://www.chrisharrison.net/">Chris Harrison</a><span style="font-size: 18px;">)</span></p>
 
     <!-- https://www.devglan.com/online-tools/aes-encryption-decryption -->
-    <h2>2024</h2>
+    <h3>2024</h3>
     <table>
       <tr>
         <td>May 17</td>
@@ -144,7 +144,9 @@
       </tr>
     </table>
 
-    <h2>2023</h2>
+    <br>
+
+    <h3>2023</h3>
     <table>
       <tr>
         <td>November 18</td>
@@ -189,7 +191,9 @@
       </tr>
     </table>
 
-    <h2>2022</h2>
+    <br>
+
+    <h3>2022</h3>
     <table>
       <tr>
         <td>June 10</td>
