not ready for ddeployment [revert]

--- a/microblog/microblog.html
+++ b/microblog/microblog.html
@@ -13,6 +13,14 @@
     <h3>2024</h3>
     <table>
       <tr>
+        <td>May 19</td>
+        <td>Robin Sushi with Ranya.</td>
+      </tr>
+      <tr>
+        <td>May 18</td>
+        <td>Went to Saleh's new place.</td>
+      </tr>
+      <tr>
         <td>May 17</td>
         <td>Lunch with Sam Bowman.</td>
       </tr>
