--- a/rk/rk.html
+++ b/rk/rk.html
@@ -8,12 +8,12 @@
   <script>
     // Sample data
     const entries = [
-      // { date: "2024-05-01", category: "Math", details: "abcdef" },
-      // { date: "2024-01-01", category: "Math", details: "abcdef" },
-      // { date: "2024-01-01", category: "Math", details: "abcdef" },
-      // { date: "2024-02-14", category: "Skateboarding", details: "abcdef" },
-      // { date: "2024-03-17", category: "Vacation", details: "abcdef" },
-      // { date: "2024-03-15", category: "Math", details: "Mustang math competition." }
+      { date: "2024-05-01", category: "Math", details: "abcdef" },
+      { date: "2024-01-01", category: "Math", details: "abcdef" },
+      { date: "2024-01-01", category: "Math", details: "abcdef" },
+      { date: "2024-02-14", category: "Skateboarding", details: "abcdef" },
+      { date: "2024-03-17", category: "Vacation", details: "abcdef" },
+      { date: "2024-03-15", category: "Math", details: "Mustang math competition." }
     ];
 
     function showContent(tabName) {
